--- a/HTML & CSS Dojo I/index.html
+++ b/HTML & CSS Dojo I/index.html
@@ -23,6 +23,26 @@
         <h1>HELLO WORLD<span>.</span></h1>
         <h2>Let's learn to code</h2>
       </div>
+      
+      <div class="contents">
+        <h3 class="section-title">Lessons</h3>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+          <p>HTML & CSS</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+          <p>PHP</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+          <p>Ruby</p>
+        </div>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+          <p>Swift</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
