--- a/HTML & CSS Dojo I/index.html
+++ b/HTML & CSS Dojo I/index.html
@@ -43,6 +43,16 @@
           <p>Swift</p>
         </div>
       </div>
+      
+      <div class="contact-form">
+        <h3 class="section-title">Contact us</h3>
+        <p>Email (Required)</p>
+        <input>
+        <p>Message (Required)</p>
+        <textarea></textarea>
+        <p>* Required fields must be filled</p>
+        <input class="contact-submit" type="submit" value="Send">
+      </div>
     </div>
   </body>
 </html>
