HTML & CSS Dojo I - The Footer

--- a/HTML & CSS Dojo I/index.html
+++ b/HTML & CSS Dojo I/index.html
@@ -54,5 +54,16 @@
         <input class="contact-submit" type="submit" value="Send">
       </div>
     </div>
+    
+    <div class="footer">
+      <div class="footer-logo">Progate</div>
+      <div class="footer-list">
+        <ul>
+          <li>About</li>
+          <li>Jobs</li>
+          <li>Contact us</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
