--- a/HTML & CSS Dojo II/index.html
+++ b/HTML & CSS Dojo II/index.html
@@ -75,6 +75,15 @@
             </div>
         </div>
     </div>
+    <div class="message-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h2>Ready to become an awesome programmer?</h2>
+                <h3>Let's learn to code, learn to be creative!</h3>
+            </div>
+            <span class="btn message">Start Learning</span>
+        </div>
+    </div>
 </body>
 
 </html>
